--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,19 @@
 
 plugins {
   id 'com.github.ben-manes.versions' version '0.39.0'
+  id 'application'
+}
+
+application {
+  mainClass = 'hexlet.code.App'
+}
+
+compileJava {
+  options.release = 17
+}
+
+repositories {
+    mavenCentral()
 }
 
 group = 'hexlet.code'
